--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,14 @@
-version: '2.1'
+version: 2.1
 
 setup: true
 
 orbs:
-  path-filtering: circleci/path-filtering@0.1.3
+  config-splitting: circle-makotom-orbs/config-splitting@0.0.6
 
 workflows:
-  generate-config:
+  setup:
     jobs:
-      - path-filtering/filter:
+      - config-splitting/run-all-modular-configs:
           base-revision: main
-          config-path: .circleci/continue-config.yml
-          mapping: |
-            ios/.* build-ios true
-            android/.* build-android true
+          config-list-file: .circleci/configs.txt
+          module-list-file: .circleci/modules.txt
