--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,10 @@ jobs:
           force-all: << parameters.force-all >>
           module-list-file: << parameters.module-list-file >>
           output: << parameters.config-list-file >>
-      - run: cat << parameters.config-list-file >>
+      - run:
+          command: cat $CONFIG_LIST_ORIGINAL
+          environment:
+            CONFIG_LIST_ORIGINAL: << parameters.config-list-file >>
       - config-splitting/combine-configs:
           config-list-file: << parameters.config-list-file >>
           output: << parameters.continuation-config >>
